# AI-Receptionist

./: .env  README.md  main.py  pyproject.toml
core/: __init__.py  config.py  redis_client.py
jobs/: __init__.py  voice_job.py
routers/: __init__.py  agent_router.py  voice_router.py
schemas/: __init__.py  voice.py
services/: __init__.py  queue_service.py
test/: file.html
workers/: __init__.py  stt_worker.py
