[project]
name = "ai-receptionist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "rq>=2.10.0",
    "uvicorn>=0.49.0",
    "websocket>=0.2.1",
]
